--- a/project_1/part1.html
+++ b/project_1/part1.html
@@ -7,13 +7,37 @@
 	</head>
 		<body>
 		  <h1> Play Connect 4!</h1>
+
+
 		  <p class="Details">
 		  Connect 4 is a two player game with the objective to be the first player to have four in a row in any direction.</p>
 
-		 <img  src="http://simulationcorner.net/connectfour/column.gif">
 
-		    <div ID="gameboard"></div>
+		  
+        <div class="circle-wrap">
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+		</div>
+		<!--  
+		 <div class="column">
+		       <img src="http://simulationcorner.net/connectfour/column.gif">
+         </div> -->
+         <div class="flex-rectangle"></div>
+		<!--  <div id="circle"></div> -->  
 
-
-		</body>
+		<!-- <div class="circle-wrap">
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+			  <div class="circle"></div>
+		</div> -->
+	</body>
 </html>
