--- a/project_1/part1.html
+++ b/project_1/part1.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
 		<title>Connect 4</title>
@@ -13,23 +14,22 @@
 		  Connect 4 is a two player game with the objective to be the first player to have four in a row in any direction.</p>
 
 
-		  
-        <div class="circle-wrap">
-			  <div class="circle"></div>
-			  <div class="circle"></div>
-			  <div class="circle"></div>
-			  <div class="circle"></div>
-			  <div class="circle"></div>
-			  <div class="circle"></div>
-			  <div class="circle"></div>
-		</div>
 		<!--  
 		 <div class="column">
 		       <img src="http://simulationcorner.net/connectfour/column.gif">
          </div> -->
-         <div class="flex-rectangle"></div>
-		<!--  <div id="circle"></div> -->  
-
+         <div class="flex-rectangle">
+	           <div class="circle-wrap">
+				  <div class="circle"></div>
+				  <div class="circle"></div>
+				  <div class="circle"></div>
+				  <div class="circle"></div>
+				  <div class="circle"></div>
+				  <div class="circle"></div>
+				  <div class="circle"></div>
+			 </div>
+      
+        </div>
 		<!-- <div class="circle-wrap">
 			  <div class="circle"></div>
 			  <div class="circle"></div>
