--- a/project_1/part1.html
+++ b/project_1/part1.html
@@ -23,17 +23,17 @@
 	<div class="scores">
 	  </div>
     
-        
+
   <div class="score-board">
   <div class="player">
     <h4>Player 1</h4>
-    <div class="score-box">
+    <div class="score-box" id="player1Score">
       0
     </div>
   </div>
   <div class="player">
     <h4>Player 2</h4>
-    <div class="score-box">
+    <div class="score-box" id="player2Score">
       0
     </div>
   </div>
